--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "framer-motion": "latest",
     "geist": "latest",
     "input-otp": "latest",
+    "jsqr": "^1.4.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "latest",
